Fixed a bug which causes an overflow in the body layout

--- a/frontend/src/components/toast.css
+++ b/frontend/src/components/toast.css
@@ -1,6 +1,6 @@
 .notif {
     display: flex;
-    position: absolute;
+    position: fixed;
     margin: 20px;
     bottom: 0;
     right: 0;
